# pai-repo

./: .cspell.json  .rustfmt.toml  Cargo.toml  __init__.sh
.cargo/: config.toml
__download__/unicode/: ID_Continue.rs  ID_Start.rs
crates/pai-error/: Cargo.toml
crates/pai-error/src/: lib.rs  macros.rs
crates/pai-file/: Cargo.toml
crates/pai-file/src/: lib.rs
crates/pai-lexer/: Cargo.toml
crates/pai-lexer/src/: lib.rs  macros.rs
crates/pai-lexer/src/properties/: syntax.toml
crates/pai-lexer/src/scanner/: entry.rs  mod.rs  unit.rs
crates/pai-lexer/src/scanner/helpers/: block_comment.rs  char.rs  is.rs  number.rs  string.rs
crates/pai-lexer/tests/: scanner.rs
crates/pai-lexer/tests/fixtures/: demo.ts
crates/pai-lexer/tests/snapshots/: scanner__main.snap
crates/pai-marco/: Cargo.toml  __init__.sh
crates/pai-marco/__cache__/: code.rs  source.rs
crates/pai-marco/src/: lib.rs
crates/pai-marco/tests/: run.rs
crates/pai-marco/tests/snapshots/: run__main.snap  run__main.snap.new
crates/pai-marco/tests/source/: mod.rs  unit.rs
crates/pai-parser/: Cargo.toml
crates/pai-parser/src/token/: span.rs
crates/pai-shared/: Cargo.toml  build.rs
crates/pai-unicode/: Cargo.toml  __init__.sh  build.rs
crates/pai-unicode/.cargo/: config.toml
crates/pai-unicode/__AutoGen__/: ID_Continue.table  ID_Start.table
crates/pai-unicode/benches/: decode.rs
crates/pai-unicode/scripts/: mod.rs  unicode_builder.rs
crates/pai-unicode/src/: common.rs  decode.rs  lib.rs  unicode.rs
