# cargo-features = ["unstable-options"]

[package]
name = "pai-marco"
description = "Pai Marcos"
version.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
pai-error.workspace = true
pai-file.workspace = true

syn.workspace = true
quote.workspace = true

[dev-dependencies]
insta.workspace = true
syn-select.workspace = true
